--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,22 +1,27 @@
-.menu {
-	float:right;
-	padding:40px 19px 0 0
-}
-.menu li {
-	float:left;
-	padding-right:28px
-}
-.menu .end {
-	padding-right:0
-}
-.menu li a {
-	display:block;
-	font-size:16px;
-	color:rgb(95, 75, 75);
-	/* text-decoration:none; */
-	background:url(../images/menu_marker.png) 0 6px no-repeat;
-	padding-left:20px
-}
-.menu li a:hover, .menu #active a {
-	color:#13c5ff
-}
+.page-header {
+	background-color: black; 
+	color: white;
+	width: 100%;	
+	clear: both;
+	text-align:right;
+	background-size: auto;
+	top:0;
+	left:0;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	/* position: fixed; */
+  }
+   
+/* this is header links css */
+  a:link, a:visited {
+	background-color:black;
+	color: white;
+	padding: 35px 25px;
+	text-align: right;
+	text-decoration: none;
+	display: inline-block;
+
+  }
+  
+  a:hover, a:active {
+	background-color: purple;
+  }
