--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,8 +1,20 @@
+body {
+  min-height: 100%;
+  height: 100%;
+	background-position:center 164px;
+
+}
+
+.main {
+	margin:0 auto;
+	width:916px;
+}
 .container {
   max-width: 1080px;
   margin: 0 auto;
 
-  display: grid;
+
+  /* display: grid;
   grid-template-rows: auto 1fr auto;
   grid-template-columns: 1fr 3fr;
   grid-template-areas:
@@ -10,9 +22,72 @@
     "main main"
     "footer footer";
   row-gap: var(--large-size);
-  column-gap: var(--large-size);
+  column-gap: var(--large-size); */
 }
 
+h2 {
+	font-size:35px;
+	line-height:1.2em;
+	color:black;
+	padding:1px 0 17px 10px;
+	letter-spacing:-1px
+}
+h2 span {
+	color:#13c5ff
+}
+
+.wrapper {
+	width:100%;
+	overflow:hidden
+}
+
+/* .image_left_align{
+  float:left;  
+  
+} */
+
+.paragraph_aligh_right{
+  width: 50%;
+  float:right;
+}
+
+.columnLeft{
+  float: left;
+  padding: 0px;
+  height: max-content;
+  width: 25%;
+  
+  
+  align-content: flex-start;
+}
+.columnRight{
+  float: left;
+  height: max-content;
+  width: 75%;
+  text-align: justify;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
+ 
+}
+
+.headerAboutme{
+  float: left;
+  padding: 0px;
+  height: max-content;
+  width: 25%;
+  text-align: center;
+  margin:0px;
+  font-size: 40px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  
+}
+
+.row{
+  display: table;
+  clear:both;
+}
+
+/* 
 .page-header {
   grid-area: header;
 }
@@ -30,4 +105,4 @@
 
 .page-footer {
   grid-area: footer;
-}
+} */
