--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -13,9 +13,9 @@ footer {
   bottom:0;
   width: 100%;
   max-height: 15%;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font:14px Arial, Helvetica, sans-serif;
 }
 
 footer ul li { 
-color: blue;
+color: white smoke;
 }
