--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -2,19 +2,19 @@
 	background-color: black; 
 	color: white;
 	width: 100%;
-	max-width: 100%;
+
 	
 	clear: both;
 	text-align:right;
-	background-size: auto;
-	top:0;
-	left:0;
+	/* background-size: auto; */
+	/* top:0;
+	left:0; */
 	max-height: 15%;
 	font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-	/* position: relative; */
-	background-size: contain;
-	background-repeat: no-repeat;
-	background-size: 300px 100px;
+	/* position: relative;  */
+	 background-size: contain;
+	/*background-repeat: no-repeat; */
+	/* background-size: 300px 100px; */
 	
 	
     /* float: left;
@@ -40,10 +40,10 @@
 	background-color: purple;
   }
 
-  .logo {
+  /* #logo {
 	display:block;
-	background:url(../images/logo.png) 0 0 no-repeat;
+	background:url(../public/logo.png) 0 0 no-repeat;
 	width:276px;
 	height:94px;
 	text-indent:-9999px
-}
+} */
