--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,7 +1,6 @@
 body {
   min-height: 100%;
   height: 100%;
-	background-position:center 164px;
 
 }
 
@@ -9,6 +8,8 @@ body {
 	margin:0 auto;
 	width:916px;
 }
+
+
 .container {
   /* max-width: 1080px; */
   /* margin: 0 auto; */
@@ -182,18 +183,40 @@ h2 span {
 }
 
 .columnPortfolio {
-  float: right;
+  /* float: right;
   width: 33.33%;
-  padding: 5px; 
+  padding: 5px;  */
   
 }
 
 .rowPorfolio{
-  content: "";
+  /* content: "";
   clear: both;
   display: table;
   width:100%;
-  display: flex;
+  display: flex; */
+
+  
+    max-width: 100%;
+    display: flex;
+    align-items: space-between;
+    /* clear:both; */
+    /* align-content: center;
+    display: flex;
+    justify-content: center; */
+    /* letter-spacing: 1px;
+    margin: 20px 0;
+    padding: 5px;
+    width: 70%;
+    margin: 0 auto; */
+    
+  
+  
+  
+  
+  
+  
+  
  
 }
 
