home and portfolio modified.

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -40,6 +40,18 @@
 	background-color: purple;
   }
 
+  #logo {
+	display:flex;
+	background:url(../images/logo.png) 0 0 no-repeat;
+	text-align: center;
+	/* width:276px;
+	height:94px; */
+
+	widows: 230px;
+	height:80px;
+	/* text-indent:-9999px */
+}
+
   /* #logo {
 	display:block;
 	background:url(../public/logo.png) 0 0 no-repeat;
@@ -47,3 +59,4 @@
 	height:94px;
 	text-indent:-9999px
 } */
+
