--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -9,11 +9,12 @@
 footer {
   clear: both;
   position: fixed;
+
   left: 0;
   bottom:0;
   width: 100%;
-  max-height: 15%;
-  font:14px Arial, Helvetica, sans-serif;
+  max-height: 30%;
+  font:14px 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 footer ul li { 
